# notes

./: .gitignore  .prettierrc.json  README.md  avl.py  binary_search.py  bst.py  bubblesort.py  disjoint_set.py  hashtable.py  heap.py  heapsort.py  insertionsort.py  knapsack.py  list.py  mergesort.py  queue.py  quicksort.py  rbt.py  selectionsort.py  stack.py  tester.py
cg/: .tool-versions  Cargo.toml  README.md  Thunk.proxy.js  Trunk.toml  index.html  package-lock.json  package.json  rustfmt.toml  tsconfig.json  vite.config.ts
cg/public/: index.html
cg/src/: index.ts  index_bg.js  index_bg.wasm  lib.rs  main.rs
cg/src/components/: editor.rs  mod.rs  player.css  player.rs  player.scss  view.rs  view.scss
cg/src/gpu/: webgpu.rs
cg/src/math/: matrix.rs  mesh.rs  mod.rs  ray.rs
cg/src/pages/: Index.rs  mod.rs
cg/src/raytrace/: scene.rs
cg/src/util/: js.rs  mod.rs  types.rs  vx.rs
cg/src/web/: array.rs  mod.rs  webgpu.rs
docker/: README.md  app.py  docker-compose.yml  dockerfile
dsa/: README.md  binary_search.py  bit.py  disjoint_set.py  dset.py  hashtable.py  heap.py  test.py  util.py
dsa/backtracking/: queens.py
dsa/combinatorics/: combinations.py  factorial.py  permutations.py
dsa/dynamic/: knapsack.py
dsa/graph/: connected.py  connectivity.py  factory.py  graph.py  maxflow.py  mst.py  ssp.py  sssp.py  topsort.py  tsp.py
dsa/hashtable/: abc.py  benchmark.py  oa_hashtable.py  sc_hashtable.py
dsa/heap/: abc.py  benchmark.py  heap.py  kheap.py
dsa/linear/: abc.py  list.py  queue.py  stack.py
dsa/linked/: abc.py  list.py  queue.py  stack.py
dsa/search/: array_search.py  binary_search.py  bit.py  heap.py  string_search.py
dsa/sort/: bubblesort.py  bucketsort.py  countingsort.py  heapsort.py  insertionsort.py  mergesort.py  quicksort.py  radixsort.py  selectionsort.py  shellsort.py  stoogesort.py  test.py
dsa/sorting/: bogosort.py  bubblesort.py  bucketsort.py  countingsort.py  heapsort.py  insertionsort.py  mergesort.py  quicksort.py  radixsort.py  selectionsort.py  shellsort.py  slowsort.py  stoogesort.py  test.py  treesort.py
kafka/: README.md  docker-compose.yml
kubernetes/: README.md
sinch/: .env.example.sh  README.md  debug.http  docker-compose.yml  package-lock.json  package.json  tsconfig.json
sort/: insertionsort.py  mergesort.py
src/: bit.py  dset.py  test.py
terraform/: README.md  credentials.sh  main.tf  terraform.tfstate  terraform.tfvars
(+238 files in other folders)
