[package]
name = "cg"
version = "0.1.0"
edition = "2021"

[build]
target = "wasm32-unknown-unknown"
rustflags = ["--cfg=web_sys_unstable_apis"]

[dependencies]
js-sys = "0.3.64"
leptos = "0.4.5"
num-traits = "0.2.16"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ['Window', 'GpuCanvasContext'] }
