[package]
name = "cg"
version = "0.1.0"
edition = "2021"

[build]
target = "wasm32-unknown-unknown"
rustflags = ["--cfg=web_sys_unstable_apis"]

[dependencies]
js-sys = "0.3.64"
leptos = { version = "0.4.5", features = ["csr", "nightly"] }
num-traits = "0.2.16"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = [
    'Gpu',
    'GpuAdapter',
    'GpuBuffer',
    'GpuBufferDescriptor',
    'GpuCanvasConfiguration',
    'GpuCanvasContext',
    'GpuCommandBuffer',
    'GpuCommandBufferDescriptor',
    'GpuCommandEncoder',
    'GpuComputePassDescriptor',
    'GpuComputePassEncoder',
    'GpuDevice',
    'GpuQueue',
    'GpuRenderPassDescriptor',
    'GpuRenderPassEncoder',
    'GpuShaderModule',
    'GpuShaderModuleDescriptor',
    'GpuTexture',
    'GpuTextureFormat',
    'GpuTextureView',
    'GpuVertexBufferLayout',
    'Navigator',
    'Window',
] }
