[package]
name = "index"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-cli = "0.2.87"

[dependencies]
js-sys = "0.3.64"
leptos = { version = "0.4.5", features = ["csr", "nightly"] }
num-traits = "0.2.16"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = [
    'Gpu',
    'GpuAdapter',
    'GpuBuffer',
    'GpuBufferDescriptor',
    'GpuCanvasConfiguration',
    'GpuCanvasContext',
    'GpuCommandBuffer',
    'GpuCommandBufferDescriptor',
    'GpuCommandEncoder',
    'GpuComputePassDescriptor',
    'GpuComputePassEncoder',
    'GpuDevice',
    'GpuFragmentState',
    'GpuQueue',
    'GpuRenderPassDescriptor',
    'GpuRenderPassEncoder',
    'GpuRenderPipeline',
    'GpuRenderPipelineDescriptor',
    'GpuShaderModule',
    'GpuShaderModuleDescriptor',
    'GpuTexture',
    'GpuTextureFormat',
    'GpuVertexState',
    'GpuTextureView',
    'GpuVertexBufferLayout',
    'Navigator',
    'ResizeObserver',
    'ResizeObserverEntry',
    'Window',
] }
